[tool.poetry]
name = "code-challenges"
version = "0.1.0"
description = ""
authors = ["wpawgasa <wichai.p@dti.or.th>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"